finished editing all pages

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,35 @@
-a {
+h1, h2, p {
     text-align: center;
 }
+body {
+    background-color: beige !important;
+}
+p {
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    line-height: 30px;
+    font-size: 18px;
+}
+
+
+.links {
+    color : green;
+    font-size: 20px;
+    text-align: center;
+    justify-content: space-between;
+    
+
+}
+a:visited {
+    color: green;
+}
+.container {
+    font-size: 20px;
+    text-align: center;
+}
+.image {
+   border-radius: 5%; 
+   margin-bottom: 10px;
+   margin-top: 20px;
+   width: 20%;
+   
+} 
